--- a/styles/todo-list.css
+++ b/styles/todo-list.css
@@ -46,14 +46,16 @@ body{
 .todo-grid-input{
  margin-bottom:20px;
  align-items:stretch;
+ margin-top:10px;
 }
 
 .todo-input,.duedate-input{
- padding:6px;
+ padding:8px;
  border:none;
  border-radius: 50px;
  box-shadow: 0px 4px 0px 0 rgb(239,232,221), 
- 0px 6px 2px 0 rgb(239,232,221) ;  
+ 0px 6px 2px 0 rgb(239,232,221) ;
+ margin-top:10px  
 }
 
 .todo-input,.duedate-input:focus{
